--- a/src/Watts Happening/AndroidManifest.xml
+++ b/src/Watts Happening/AndroidManifest.xml
@@ -21,7 +21,7 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
+    <uses-permission android:name="android.permission.DUMP"/>
         
 
     <application
